--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-#dashboard {
+#rooms_display {
   width: 90%;
   height: 1000px;
   border: solid 4px black;
@@ -8,4 +8,9 @@
   display: block;
 }
 
-
+.room {
+  float: left;
+  border: solid 3px black;
+  height: 25%;
+  width: 20%;
+}
